--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Astronomska opservatorija</title>
-  <meta name="description" content="Prezentacija astronomske opservatorije: posete, događaji, galerija i edukativni sadržaji." />
+  <title>Astronomska opservatorija – Početna</title>
+  <meta name="description" content="Dobrodošli na početnu stranicu astronomske opservatorije u Zrenjaninu. Pronađite informacije o događajima, galeriji i edukativnim sadržajima.">
+  <meta name="keywords" content="astronomija, opservatorija, početna, zvezde, planete, edukacija, Zrenjanin">
+  <meta name="author" content="Marko Bobinac SI 29/21">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 
   <!-- Glavni CSS -->
-  <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- AOS CSS za animacije -->
+  <link href="../assets/css/main.css" rel="stylesheet">
+  
+  <!-- AOS CSS za animacije na skrolovanje -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
+
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
@@ -115,7 +118,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="main-footer py-5">
+  <footer class="main-footer py-5" data-aos="fade-up" data-aos-delay="200">
     <div class="container">
       <div class="row">
         <!-- Info kolona -->
@@ -161,8 +164,8 @@
     AOS.init();
   </script>
   <!-- Back to Top -->
-<button id="backToTop" class="btn btn-primary">
-  <i class="bi bi-arrow-up"></i>
-</button>
+  <button id="backToTop" class="btn btn-primary">
+    <i class="bi bi-arrow-up"></i>
+  </button>
 </body>
 </html>
