--- a/pages/dogadjaji.html
+++ b/pages/dogadjaji.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Događaji - Astronomska opservatorija</title>
+  <title>Događaji – Astronomska opservatorija</title>
+  <meta name="description" content="Pregled aktuelnih događaja u astronomskoj opservatoriji: predavanja, posmatranja noćnog neba i edukativne aktivnosti.">
+  <meta name="keywords" content="astronomija, događaji, predavanja, opservatorija, Zrenjanin, posmatranje zvezda, edukacija">
+  <meta name="author" content="Marko Bobinac SI 29/21">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +23,7 @@
   <!-- AOS CSS za animacije na skrolovanje -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
+
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
@@ -69,7 +73,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="main-footer py-5">
+  <footer class="main-footer py-5" data-aos="fade-up" data-aos-delay="200">
     <div class="container">
       <div class="row">
         <!-- Info kolona -->
