--- a/pages/galerija.html
+++ b/pages/galerija.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Galerija - Astronomska opservatorija</title>
+  <title>Galerija – Astronomska opservatorija</title>
+  <meta name="description" content="Galerija slika teleskopa, Mlečnog puta, planeta i astronomskih fenomena posmatranih u opservatoriji.">
+  <meta name="keywords" content="astronomija, galerija, slike, opservatorija, teleskop, Mlečni put, planete, svemir">
+  <meta name="author" content="Marko Bobinac SI 29/21">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,15 +17,13 @@
   <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
-
   <!-- Glavni CSS -->
   <link href="../assets/css/main.css" rel="stylesheet">
   
   <!-- AOS CSS za animacije na skrolovanje -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
+
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
@@ -93,7 +97,7 @@
   </div>
 
   <!-- Footer -->
-  <footer class="main-footer py-5">
+  <footer class="main-footer py-5" data-aos="fade-up" data-aos-delay="200">
     <div class="container">
       <div class="row">
         <!-- Info kolona -->
