--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kontakt - Astronomska opservatorija</title>
+  <title>Kontakt – Astronomska opservatorija</title>
+  <meta name="description" content="Kontaktirajte astronomsku opservatoriju u Zrenjaninu, pošaljite poruku putem forme ili nas posetite lično.">
+  <meta name="keywords" content="astronomija, opservatorija, kontakt, Zrenjanin, informacije, adresa, telefon">
+  <meta name="author" content="Marko Bobinac SI 29/21">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +23,7 @@
   <!-- AOS CSS za animacije na skrolovanje -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
+
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
@@ -122,7 +126,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="main-footer py-5">
+  <footer class="main-footer py-5" data-aos="fade-up" data-aos-delay="200">
     <div class="container">
       <div class="row">
         <!-- Info kolona -->
@@ -168,8 +172,8 @@
     AOS.init();
   </script>
   <!-- Back to Top -->
-<button id="backToTop" class="btn btn-primary">
-  <i class="bi bi-arrow-up"></i>
-</button>
+  <button id="backToTop" class="btn btn-primary">
+    <i class="bi bi-arrow-up"></i>
+  </button>
 </body>
 </html>
