--- a/pages/o-nama.html
+++ b/pages/o-nama.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>O nama - Astronomska opservatorija</title>
+  <title>O nama – Astronomska opservatorija</title>
+  <meta name="description" content="Saznajte više o astronomskoj opservatoriji u Zrenjaninu – njenoj istoriji, značaju i edukativnoj ulozi.">
+  <meta name="keywords" content="astronomija, opservatorija, o nama, istorija, edukacija, svemir, Zrenjanin">
+  <meta name="author" content="Marko Bobinac SI 29/21">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +23,7 @@
   <!-- AOS CSS za animacije na skrolovanje -->
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet"> 
 </head>
+
 <body>
   <!-- Navigacija -->
   <header class="main-header sticky-top">
@@ -52,9 +56,9 @@
 
   <!-- Sadržaj -->
   <main class="container py-5">
+    <h1 class="mb-4" data-aos="fade-down">O nama</h1>
     <div class="row align-items-center">
       <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-        <h1>O nama</h1>
         <p>
           Astronomska opservatorija je centar za posmatranje noćnog neba i edukaciju iz oblasti astronomije.
           Naš cilj je da približimo astronomiju svim generacijama kroz javna posmatranja, predavanja i radionice.
@@ -71,7 +75,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="main-footer py-5">
+  <footer class="main-footer py-5" data-aos="fade-up" data-aos-delay="200">
     <div class="container">
       <div class="row">
         <!-- Info kolona -->
@@ -117,8 +121,8 @@
     AOS.init();
   </script>
   <!-- Back to Top -->
-<button id="backToTop" class="btn btn-primary">
-  <i class="bi bi-arrow-up"></i>
-</button>
+  <button id="backToTop" class="btn btn-primary">
+    <i class="bi bi-arrow-up"></i>
+  </button>
 </body>
 </html>
