--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="keywords" content="astronomija, opservatorija, početna, zvezde, planete, edukacija, Zrenjanin">
   <meta name="author" content="Marko Bobinac SI 29/21">
 
-  <!-- Favicon -->
+  <!-- Ikonica sajta -->
   <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Bootstrap Icons -->
+  <!-- Bootstrap ikonice -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Glavni CSS -->
@@ -26,23 +26,23 @@
 
 <body>
   <!-- Navigacija -->
-  <header class="main-header sticky-top">
+  <header class="glavno-zaglavlje sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <!-- Logo -->
         <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
-          <img src="assets/icons/logo.png" alt="Logo" width="40" height="40" class="no-hover"
+          <img src="assets/icons/logo.png" alt="Logo" width="40" height="40" class="bez-hovera"
                onerror="this.src='https://via.placeholder.com/40x40?text=★'">
           <span>Astronomska opservatorija</span>
         </a>
 
         <!-- Toggler za mobilne -->
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navigacija">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <!-- Navigacija -->
-        <div id="nav" class="collapse navbar-collapse">
+        <div id="navigacija" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto align-items-lg-center">
             <li class="nav-item"><a class="nav-link" href="pages/o-nama.html">O nama</a></li>
             <li class="nav-item"><a class="nav-link" href="pages/dogadjaji.html">Događaji</a></li>
@@ -51,18 +51,18 @@
           </ul>
 
           <!-- Dugmad za pristupačnost -->
-          <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
-            <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
-            <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
+          <div class="alatke-pristupacnosti d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
+            <button id="preklopKontrasta" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
+            <button id="preklopFonta" class="btn btn-sm btn-outline-light">Veliki font</button>
           </div>
         </div>
       </div>
     </nav>
   </header>
 
-  <!-- Hero -->
+  <!-- Uvodna sekcija -->
   <main>
-    <section class="hero text-white d-flex align-items-center" 
+    <section class="uvodna-sekcija text-white d-flex align-items-center" 
              style="background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('assets/img/milky-way.jpg') center/cover no-repeat;">
       <div class="container py-5 text-center" data-aos="zoom-in">
         <h1 class="display-5 fw-bold">Posmatrajmo zvezde zajedno</h1>
@@ -83,13 +83,13 @@
 
     <!-- Slajder -->
     <section class="container my-5">
-      <div id="astroSlider" class="carousel slide shadow-lg rounded-4 overflow-hidden" data-bs-ride="carousel" data-bs-interval="5000">
+      <div id="astroKlizac" class="carousel slide shadow-lg rounded-4 overflow-hidden" data-bs-ride="carousel" data-bs-interval="5000">
         
-        <!-- indikator tačkice -->
+        <!-- Indikatori -->
         <div class="carousel-indicators">
-          <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="0" class="active"></button>
-          <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="1"></button>
-          <button type="button" data-bs-target="#astroSlider" data-bs-slide-to="2"></button>
+          <button type="button" data-bs-target="#astroKlizac" data-bs-slide-to="0" class="active"></button>
+          <button type="button" data-bs-target="#astroKlizac" data-bs-slide-to="1"></button>
+          <button type="button" data-bs-target="#astroKlizac" data-bs-slide-to="2"></button>
         </div>
 
         <!-- Slajdovi -->
@@ -118,72 +118,71 @@
         </div>
 
         <!-- Kontrole -->
-        <button class="carousel-control-prev" type="button" data-bs-target="#astroSlider" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#astroKlizac" data-bs-slide="prev">
           <span class="carousel-control-prev-icon"></span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#astroSlider" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#astroKlizac" data-bs-slide="next">
           <span class="carousel-control-next-icon"></span>
         </button>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="main-footer text-light pt-5">
-  <div class="container">
-    <div class="row gy-4">
-      <!-- Logo i opis -->
-      <div class="col-md-4">
-        <h5 class="fw-bold">Astronomska opservatorija</h5>
-        <p class="small">
-          Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
-          Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
-        </p>
-      </div>
+  <!-- Futer -->
+  <footer class="glavni-futer text-light pt-5">
+    <div class="container">
+      <div class="row gy-4">
+        <!-- Logo i opis -->
+        <div class="col-md-4">
+          <h5 class="fw-bold">Astronomska opservatorija</h5>
+          <p class="small">
+            Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
+            Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
+          </p>
+        </div>
 
-      <!-- Linkovi -->
-      <div class="col-md-2">
-        <h6 class="fw-bold">Navigacija</h6>
-        <ul class="list-unstyled small">
-          <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
-          <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
-          <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
-          <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
-        </ul>
-      </div>
+        <!-- Linkovi -->
+        <div class="col-md-2">
+          <h6 class="fw-bold">Navigacija</h6>
+          <ul class="list-unstyled small">
+            <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
+            <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
+            <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
+            <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
+          </ul>
+        </div>
 
-      <!-- Kontakt -->
-      <div class="col-md-3">
-        <h6 class="fw-bold">Kontakt</h6>
-        <ul class="list-unstyled small">
-          <li>Zrenjanin, Srbija</li>
-          <li>✉ kontakt@opservatorija.rs</li>
-          <li>☎ +381 23 123 456</li>
-          <li>Radno vreme: 18:00 – 23:00</li>
-        </ul>
-      </div>
+        <!-- Kontakt -->
+        <div class="col-md-3">
+          <h6 class="fw-bold">Kontakt</h6>
+          <ul class="list-unstyled small">
+            <li>Zrenjanin, Srbija</li>
+            <li>✉ kontakt@opservatorija.rs</li>
+            <li>☎ +381 23 123 456</li>
+            <li>Radno vreme: 18:00 – 23:00</li>
+          </ul>
+        </div>
 
-      <!-- Društvene mreže -->
-      <div class="col-md-3">
-        <h6 class="fw-bold">Pratite nas</h6>
-        <div class="d-flex gap-3 mt-2">
-          <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
+        <!-- Društvene mreže -->
+        <div class="col-md-3">
+          <h6 class="fw-bold">Pratite nas</h6>
+          <div class="d-flex gap-3 mt-2">
+            <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
+          </div>
         </div>
       </div>
+
+      <hr class="border-secondary my-4">
+
+      <!-- Donja traka -->
+      <div class="d-flex justify-content-between align-items-center pb-3 small">
+        <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
+        <span>Izradio: Marko Bobinac SI 29/21</span>
+      </div>
     </div>
-
-    <hr class="border-secondary my-4">
-
-    <!-- Donja traka -->
-    <div class="d-flex justify-content-between align-items-center pb-3 small">
-      <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
-      <span>Izradio: Marko Bobinac SI 29/21</span>
-    </div>
-  </div>
-</footer>
-
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -194,8 +193,8 @@
   <script>
     AOS.init();
   </script>
-  <!-- Back to top -->
-  <button id="backToTop" class="btn btn-primary">
+  <!-- Dugme Nazad na vrh -->
+  <button id="nazadNaVrh" class="btn btn-primary">
     <i class="bi bi-arrow-up"></i>
   </button>
 </body>
