--- a/pages/galerija.html
+++ b/pages/galerija.html
@@ -8,13 +8,13 @@
   <meta name="keywords" content="astronomija, galerija, slike, opservatorija, teleskop, Mlečni put, planete, svemir">
   <meta name="author" content="Marko Bobinac SI 29/21">
 
-  <!-- Favicon -->
+  <!-- Ikonica sajta -->
   <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Bootstrap Icons -->
+  <!-- Bootstrap ikonice -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Glavni CSS -->
@@ -26,18 +26,18 @@
 
 <body>
   <!-- Navigacija -->
-  <header class="main-header sticky-top">
+  <header class="glavno-zaglavlje sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-          <img src="../assets/icons/logo.png" alt="Logo Astronomske opservatorije" width="40" height="40" class="no-hover"
+          <img src="../assets/icons/logo.png" alt="Logo Astronomske opservatorije" width="40" height="40" class="bez-hovera"
                onerror="this.src='https://via.placeholder.com/40x40?text=★'">
           <span>Astronomska opservatorija</span>
         </a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navigacija">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="nav" class="collapse navbar-collapse">
+        <div id="navigacija" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto align-items-lg-center">
             <li class="nav-item"><a class="nav-link" href="o-nama.html">O nama</a></li>
             <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
@@ -45,9 +45,9 @@
             <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
           </ul>
           <!-- Dugmad za pristupačnost -->
-          <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
-            <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
-            <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
+          <div class="alatke-pristupacnosti d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
+            <button id="preklopKontrasta" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
+            <button id="preklopFonta" class="btn btn-sm btn-outline-light">Veliki font</button>
           </div>
         </div>
       </div>
@@ -56,108 +56,107 @@
 
   <!-- Sadržaj -->
   <main class="container py-5">
-  <h1 class="mb-4 text-center" data-aos="fade-down">Galerija</h1>
-  <div class="row justify-content-center">
-    <div class="col-lg-8" data-aos="fade-up" data-aos-delay="150">
-      <p class="lead text-center">
-        Naša galerija prikazuje <strong>opservatoriju</strong>, 
-        <strong>teleskope</strong> i <strong>astronomske fenomene</strong> 
-        koje smo zabeležili tokom posmatranja.
-      </p>
+    <h1 class="mb-4 text-center" data-aos="fade-down">Galerija</h1>
+    <div class="row justify-content-center">
+      <div class="col-lg-8" data-aos="fade-up" data-aos-delay="150">
+        <p class="lead text-center">
+          Naša galerija prikazuje <strong>opservatoriju</strong>, 
+          <strong>teleskope</strong> i <strong>astronomske fenomene</strong> 
+          koje smo zabeležili tokom posmatranja.
+        </p>
+      </div>
     </div>
-  </div>
 
-  <!-- Dinamička galerija -->
-  <div id="gallery" class="row g-4 mt-4"></div>
+    <!-- Dinamička galerija -->
+    <div id="galerija" class="row g-4 mt-4"></div>
 
-  <!-- Loader za galeriju -->
-  <div id="galleryLoader" class="text-center my-5" style="display:none;">
-    <div class="spinner-border text-primary" role="status">
-      <span class="visually-hidden">Učitavanje...</span>
+    <!-- Učitavač galerije -->
+    <div id="ucitavacGalerije" class="text-center my-5" style="display:none;">
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Učitavanje...</span>
+      </div>
     </div>
-  </div>
 
-  <!-- Dugme Učitaj još -->
-  <div class="text-center my-4">
-    <button id="loadMore" class="btn btn-outline-primary" style="display:none;">
-      Učitaj još
-    </button>
-  </div>
-</main>
+    <!-- Dugme Učitaj još -->
+    <div class="text-center my-4">
+      <button id="ucitajJos" class="btn btn-outline-primary" style="display:none;">
+        Učitaj još
+      </button>
+    </div>
+  </main>
 
-
-  <!-- Modal za lightbox -->
-  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+  <!-- Modal za pregled slike -->
+  <div class="modal fade" id="pregledSlikeModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg">
       <div class="modal-content bg-dark">
         <div class="modal-body text-center">
-          <img id="lightboxImg" src="" alt="" class="img-fluid rounded no-hover">
-          <p id="lightboxCaption" class="text-light mt-2"></p>
+          <img id="pregledSlikeImg" src="" alt="" class="img-fluid rounded bez-hovera">
+          <p id="pregledSlikeNatpis" class="text-light mt-2"></p>
         </div>
         <div class="modal-footer border-0 justify-content-between">
-          <button type="button" class="btn btn-outline-light" id="prevImage">⟨</button>
-          <button type="button" class="btn btn-outline-light" id="nextImage">⟩</button>
+          <button type="button" class="btn btn-outline-light" id="prethodnaSlika">⟨</button>
+          <button type="button" class="btn btn-outline-light" id="sledecaSlika">⟩</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zatvori</button>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer class="main-footer text-light pt-5">
-  <div class="container">
-    <div class="row gy-4">
-      <!-- Logo i opis -->
-      <div class="col-md-4">
-        <h5 class="fw-bold">Astronomska opservatorija</h5>
-        <p class="small">
-          Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
-          Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
-        </p>
-      </div>
+  <!-- Futer -->
+  <footer class="glavni-futer text-light pt-5">
+    <div class="container">
+      <div class="row gy-4">
+        <!-- Logo i opis -->
+        <div class="col-md-4">
+          <h5 class="fw-bold">Astronomska opservatorija</h5>
+          <p class="small">
+            Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
+            Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
+          </p>
+        </div>
 
-      <!-- Linkovi -->
-      <div class="col-md-2">
-        <h6 class="fw-bold">Navigacija</h6>
-        <ul class="list-unstyled small">
-          <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
-          <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
-          <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
-          <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
-        </ul>
-      </div>
+        <!-- Linkovi -->
+        <div class="col-md-2">
+          <h6 class="fw-bold">Navigacija</h6>
+          <ul class="list-unstyled small">
+            <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
+            <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
+            <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
+            <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
+          </ul>
+        </div>
 
-      <!-- Kontakt -->
-      <div class="col-md-3">
-        <h6 class="fw-bold">Kontakt</h6>
-        <ul class="list-unstyled small">
-          <li>Zrenjanin, Srbija</li>
-          <li>✉ kontakt@opservatorija.rs</li>
-          <li>☎ +381 23 123 456</li>
-          <li>Radno vreme: 18:00 – 23:00</li>
-        </ul>
-      </div>
+        <!-- Kontakt -->
+        <div class="col-md-3">
+          <h6 class="fw-bold">Kontakt</h6>
+          <ul class="list-unstyled small">
+            <li>Zrenjanin, Srbija</li>
+            <li>✉ kontakt@opservatorija.rs</li>
+            <li>☎ +381 23 123 456</li>
+            <li>Radno vreme: 18:00 – 23:00</li>
+          </ul>
+        </div>
 
-      <!-- Društvene mreže -->
-      <div class="col-md-3">
-        <h6 class="fw-bold">Pratite nas</h6>
-        <div class="d-flex gap-3 mt-2">
-          <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
+        <!-- Društvene mreže -->
+        <div class="col-md-3">
+          <h6 class="fw-bold">Pratite nas</h6>
+          <div class="d-flex gap-3 mt-2">
+            <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <hr class="border-secondary my-4">
+      <hr class="border-secondary my-4">
 
-    <!-- Donja traka -->
-    <div class="d-flex justify-content-between align-items-center pb-3 small">
-      <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
-      <span>Izradio: Marko Bobinac SI 29/21</span>
+      <!-- Donja traka -->
+      <div class="d-flex justify-content-between align-items-center pb-3 small">
+        <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
+        <span>Izradio: Marko Bobinac SI 29/21</span>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -169,8 +168,8 @@
     AOS.init();
   </script>
 
-  <!-- Back to top -->
-  <button id="backToTop" class="btn btn-primary">
+  <!-- Dugme Nazad na vrh -->
+  <button id="nazadNaVrh" class="btn btn-primary">
     <i class="bi bi-arrow-up"></i>
   </button>
 </body>
