--- a/pages/o-nama.html
+++ b/pages/o-nama.html
@@ -11,10 +11,10 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Bootstrap Icons -->
+  <!-- Bootstrap ikonice -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Favicon -->
+  <!-- Ikonica sajta -->
   <link rel="icon" type="image/x-icon" href="../assets/icons/favicon.ico">
 
   <!-- Glavni CSS -->
@@ -26,18 +26,18 @@
 
 <body>
   <!-- Navigacija -->
-  <header class="main-header sticky-top">
+  <header class="glavno-zaglavlje sticky-top">
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
-          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" class="no-hover"
+          <img src="../assets/icons/logo.png" alt="Logo" width="40" height="40" class="bez-hovera"
                onerror="this.src='https://via.placeholder.com/40x40?text=★'">
           <span>Astronomska opservatorija</span>
         </a>
-        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navigacija">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="nav" class="collapse navbar-collapse">
+        <div id="navigacija" class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto align-items-lg-center">
             <li class="nav-item"><a class="nav-link active" href="o-nama.html">O nama</a></li>
             <li class="nav-item"><a class="nav-link" href="dogadjaji.html">Događaji</a></li>
@@ -45,9 +45,9 @@
             <li class="nav-item"><a class="nav-link" href="kontakt.html">Kontakt</a></li>
           </ul>
           <!-- Dugmad za pristupačnost -->
-          <div class="accessibility-tools d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
-            <button id="contrastToggle" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
-            <button id="fontToggle" class="btn btn-sm btn-outline-light">Veliki font</button>
+          <div class="alatke-pristupacnosti d-flex gap-2 ms-lg-3 mt-3 mt-lg-0">
+            <button id="preklopKontrasta" class="btn btn-sm btn-outline-light">Visoki kontrast</button>
+            <button id="preklopFonta" class="btn btn-sm btn-outline-light">Veliki font</button>
           </div>
         </div>
       </div>
@@ -56,95 +56,94 @@
 
   <!-- Sadržaj -->
   <main class="container py-5">
-  <h1 class="mb-4" data-aos="fade-down">O nama</h1>
-  <div class="row align-items-center">
-    
-    <!-- Tekst levo -->
-    <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
-      <p class="lead">
-        Astronomska opservatorija je centar za posmatranje noćnog neba i edukaciju iz oblasti astronomije.
-        Naš cilj je da približimo čuda svemira svim generacijama kroz <strong>javna posmatranja</strong>,
-        <strong>predavanja</strong> i <strong>radionice</strong>.
-      </p>
-
-      <h3 class="mt-4">Naša misija</h3>
-      <p>
-        Inspirišemo i obrazujemo posetioce svih uzrasta, od učenika do univerzitetskih studenata,
-        i pružamo priliku da dožive nezaboravno iskustvo posmatranja kosmosa.
-      </p>
-
-      <h3 class="mt-4">Šta nudimo</h3>
-      <ul class="list-unstyled">
-        <li>• Moderni teleskopi za posmatranje planeta i galaksija</li>
-        <li>• Edukativna predavanja i radionice</li>
-        <li>• Stručni vodiči i predavači</li>
-        <li>• Javna posmatranja noćnog neba</li>
-      </ul>
-    </div>
-
-    <!-- Slika desno -->
-    <div class="col-lg-6" data-aos="fade-left">
-      <img src="../assets/img/opservatorija.jpg" alt="Opservatorija" class="img-fluid rounded shadow">
-    </div>
-  </div>
-</main>
-
-
-  <!-- Footer -->
-  <footer class="main-footer text-light pt-5">
-  <div class="container">
-    <div class="row gy-4">
-      <!-- Logo i opis -->
-      <div class="col-md-4">
-        <h5 class="fw-bold">Astronomska opservatorija</h5>
-        <p class="small">
-          Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
-          Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
+    <h1 class="mb-4" data-aos="fade-down">O nama</h1>
+    <div class="row align-items-center">
+      
+      <!-- Tekst levo -->
+      <div class="col-lg-6 mb-4 mb-lg-0" data-aos="fade-right">
+        <p class="lead">
+          Astronomska opservatorija je centar za posmatranje noćnog neba i edukaciju iz oblasti astronomije.
+          Naš cilj je da približimo čuda svemira svim generacijama kroz <strong>javna posmatranja</strong>,
+          <strong>predavanja</strong> i <strong>radionice</strong>.
         </p>
-      </div>
 
-      <!-- Linkovi -->
-      <div class="col-md-2">
-        <h6 class="fw-bold">Navigacija</h6>
-        <ul class="list-unstyled small">
-          <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
-          <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
-          <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
-          <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
+        <h3 class="mt-4">Naša misija</h3>
+        <p>
+          Inspirišemo i obrazujemo posetioce svih uzrasta, od učenika do univerzitetskih studenata,
+          i pružamo priliku da dožive nezaboravno iskustvo posmatranja kosmosa.
+        </p>
+
+        <h3 class="mt-4">Šta nudimo</h3>
+        <ul class="list-unstyled">
+          <li>• Moderni teleskopi za posmatranje planeta i galaksija</li>
+          <li>• Edukativna predavanja i radionice</li>
+          <li>• Stručni vodiči i predavači</li>
+          <li>• Javna posmatranja noćnog neba</li>
         </ul>
       </div>
 
-      <!-- Kontakt -->
-      <div class="col-md-3">
-        <h6 class="fw-bold">Kontakt</h6>
-        <ul class="list-unstyled small">
-          <li>Zrenjanin, Srbija</li>
-          <li>✉ kontakt@opservatorija.rs</li>
-          <li>☎ +381 23 123 456</li>
-          <li>Radno vreme: 18:00 – 23:00</li>
-        </ul>
+      <!-- Slika desno -->
+      <div class="col-lg-6" data-aos="fade-left">
+        <img src="../assets/img/opservatorija.jpg" alt="Opservatorija" class="img-fluid rounded shadow">
       </div>
+    </div>
+  </main>
 
-      <!-- Društvene mreže -->
-      <div class="col-md-3">
-        <h6 class="fw-bold">Pratite nas</h6>
-        <div class="d-flex gap-3 mt-2">
-          <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
+  <!-- Futer -->
+  <footer class="glavni-futer text-light pt-5">
+    <div class="container">
+      <div class="row gy-4">
+        <!-- Logo i opis -->
+        <div class="col-md-4">
+          <h5 class="fw-bold">Astronomska opservatorija</h5>
+          <p class="small">
+            Centar za posmatranje noćnog neba i edukaciju u oblasti astronomije. 
+            Naš cilj je da približimo svemir svima kroz javna posmatranja, predavanja i radionice.
+          </p>
+        </div>
+
+        <!-- Linkovi -->
+        <div class="col-md-2">
+          <h6 class="fw-bold">Navigacija</h6>
+          <ul class="list-unstyled small">
+            <li><a href="pages/o-nama.html" class="text-decoration-none text-light">O nama</a></li>
+            <li><a href="pages/dogadjaji.html" class="text-decoration-none text-light">Događaji</a></li>
+            <li><a href="pages/galerija.html" class="text-decoration-none text-light">Galerija</a></li>
+            <li><a href="pages/kontakt.html" class="text-decoration-none text-light">Kontakt</a></li>
+          </ul>
+        </div>
+
+        <!-- Kontakt -->
+        <div class="col-md-3">
+          <h6 class="fw-bold">Kontakt</h6>
+          <ul class="list-unstyled small">
+            <li>Zrenjanin, Srbija</li>
+            <li>✉ kontakt@opservatorija.rs</li>
+            <li>☎ +381 23 123 456</li>
+            <li>Radno vreme: 18:00 – 23:00</li>
+          </ul>
+        </div>
+
+        <!-- Društvene mreže -->
+        <div class="col-md-3">
+          <h6 class="fw-bold">Pratite nas</h6>
+          <div class="d-flex gap-3 mt-2">
+            <a href="#" class="text-light fs-4"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="text-light fs-4"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="text-light fs-4"><i class="bi bi-youtube"></i></a>
+          </div>
         </div>
       </div>
-    </div>
 
-    <hr class="border-secondary my-4">
+      <hr class="border-secondary my-4">
 
-    <!-- Donja traka -->
-    <div class="d-flex justify-content-between align-items-center pb-3 small">
-      <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
-      <span>Izradio: Marko Bobinac SI 29/21</span>
+      <!-- Donja traka -->
+      <div class="d-flex justify-content-between align-items-center pb-3 small">
+        <span>© 2025 Astronomska opservatorija. Sva prava zadržana.</span>
+        <span>Izradio: Marko Bobinac SI 29/21</span>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -155,8 +154,8 @@
   <script>
     AOS.init();
   </script>
-  <!-- Back to top -->
-  <button id="backToTop" class="btn btn-primary">
+  <!-- Dugme Nazad na vrh -->
+  <button id="nazadNaVrh" class="btn btn-primary">
     <i class="bi bi-arrow-up"></i>
   </button>
 </body>
